--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile "org.androidannotations:androidannotations-api:$AAVersion"
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.marshalchen.ultimaterecyclerview:library:0.3.17'
+    compile 'com.etsy.android.grid:library:1.0.5'
+    compile 'org.roboguice:roboguice:3.0.1'
 }
