--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AlbumStaggeredActivity"/>
-        <activity android:name=".activity.ImageStaggeredActivity"/>
+        <activity android:name=".activity.AlbumActivity"/>
+        <activity android:name=".activity.ImageActivity"/>
         <activity android:name=".activity.ImageDetailActivity"/>
     </application>
 
