--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: android
 sudo: required
+before_install:
+ - chmod +x gradlew
 android:
   components:
     # Uncomment the lines below if you want to
@@ -17,9 +19,9 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-    - addon-google_apis-google-19
+    # - addon-google_apis-google-19
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-19
-    - sys-img-x86-android-17
+    # - sys-img-x86-android-17
